--- a/examples/CandleStickChartWithCHMousePointer/package.json
+++ b/examples/CandleStickChartWithCHMousePointer/package.json
@@ -3,13 +3,14 @@
   "description": "Examples for react-stockcharts",
   "version": "0.0.24",
   "dependencies": {
+    "bootstrap": "^5.1.1",
     "d3-dsv": "^1.0.8",
     "d3-format": "^1.2.1",
     "d3-scale": "^1.0.7",
     "d3-time-format": "^2.1.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-bootstrap": "^0.31.5",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^16.2.0",
     "react-stockcharts": "^0.7.8",
     "shortid": "^2.2.8"
